# CxxPolyFit

./: CMakeLists.txt  LICENSE  README
Src/: Polynomial.cc  Polynomial.hh  cxxlsfitCmakeConfig.h.in
Src/Main/: cxxlsfit.cc
tests/quad2eval/: CMakeLists.txt  quad2eval.cc
tests/quad2fit/: CMakeLists.txt  quad2fit.cc
tests/quadeval/: CMakeLists.txt  quadeval.cc
tests/quadfit/: CMakeLists.txt  quadfit.cc
tests/secondeval/: CMakeLists.txt  secondeval.cc
tests/test3D/: CMakeLists.txt  test3D.cc
tools/: 3dplot.py  basic_test.sh
